--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">	
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" media="screen" href="css/style.css">
+		<meta name="author" content="Jodhani Janki">
 </head>
 <body>
 		<div id="particles-js">
