--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 		<div class="nav">
 			<p>Contribute to COLLECTIVE INTELLIGENCE.<br>Start your DEEP LEARNING Journey Today.</p>
 		</div>
+		<a href="picture.html"> Picture </a>
+		<article class="courses">
+			<ol>
+				<li class="course">Html</li>
+				<li class="course">Javascript</li>
+				<li class="course">Java</li>
+				<li class="course">Ruby</li>
+				<li class="course">Python</li>
+				<li class="course">Aws</li>
+			</ol>
+		</article>
 		
 
 </body>
