--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<li class="course">Ruby</li>
 				<li class="course">Python</li>
 				<li class="course">Aws</li>
+				<li class="coures">AI</li>
 			</ol>
 		</article>
 		
