--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class="nav">
 			<p>Contribute to COLLECTIVE INTELLIGENCE.<br>Start your DEEP LEARNING Journey Today.</p>
 		</div>
-		<a href="picture.html"> Picture </a>
 		<article class="courses">
+			<h1>Courses</h1>
 			<ol>
 				<li class="course">Html</li>
 				<li class="course">Javascript</li>
@@ -33,7 +33,7 @@
 				<li class="course">Ruby</li>
 				<li class="course">Python</li>
 				<li class="course">Aws</li>
-				<li class="coures">AI</li>
+				<li class="course">AI</li>
 			</ol>
 		</article>
 		
